--- a/notebooks/Transformer_Experimental.ipynb
+++ b/notebooks/Transformer_Experimental.ipynb
@@ -1113,7 +1113,229 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Loss: 0.057526902803787174\n"
+      "Validation Loss: 0.057526902803787174\n",
+      "Epoch 2, Loss: 0.05738054602967546\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.057276453830434615\n",
+      "Epoch 3, Loss: 0.056865705219966936\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05747072567494781\n",
+      "Epoch 4, Loss: 0.056626043007487574\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.056420056654861835\n",
+      "Epoch 5, Loss: 0.05643747643437209\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05624296069827712\n",
+      "Epoch 6, Loss: 0.056289507521573974\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05640595956457657\n",
+      "Epoch 7, Loss: 0.056162805683411754\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.056663643000764534\n"
      ]
     }
    ],
@@ -1230,16 +1452,20 @@
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using {device} for training.\")\n",
     "\n",
     "# Prepare data and add missingness indicators\n",
     "X_train, X_val, y_train, y_val = train_test_split(features, labels, test_size=0.2, random_state=42)\n",
     "X_train, X_val = add_nan_indicators(X_train), add_nan_indicators(X_val)\n",
     "\n",
     "# Convert to tensors\n",
-    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
-    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32)\n",
-    "X_val_tensor = torch.tensor(X_val, dtype=torch.float32)\n",
-    "y_val_tensor = torch.tensor(y_val, dtype=torch.float32)\n",
+    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32).to(device)\n",
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).to(device)\n",
+    "X_val_tensor = torch.tensor(X_val, dtype=torch.float32).to(device)\n",
+    "y_val_tensor = torch.tensor(y_val, dtype=torch.float32).to(device)\n",
     "\n",
     "# Create DataLoader\n",
     "train_data = TensorDataset(X_train_tensor, y_train_tensor)\n",
@@ -1249,7 +1475,14 @@
     "\n",
     "# Initialize the model\n",
     "model = TimeSeriesTransformer(num_features=X_train.shape[1] // 2)  # Assuming features were doubled to account for indicators\n",
+    "model.to(device)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# To keep all the data focus on the minority class (sepsis = 1)\n",
+    "class_weights = compute_class_weight('balanced', classes=[0, 1], y=y_train)\n",
+    "class_weights = torch.tensor(class_weights, dtype=torch.float32).to(device)\n",
+    "\n",
+    "criterion = nn.BCELoss(weight=class_weights[1])  # Focus more on the minority class\n",
     "criterion = nn.BCELoss()\n",
     "\n",
     "# Train the model\n",
