--- a/notebooks/Transformer_Experimental.ipynb
+++ b/notebooks/Transformer_Experimental.ipynb
@@ -1699,7 +1699,7 @@
      "output_type": "stream",
      "text": [
       "Using cpu for training.\n",
-      "Processing data for patient ID: 28080.0, File: p110412.psv\r"
+      "Processing data for patient ID: 13116.0, File: p000980.psv\r"
      ]
     }
    ],
@@ -1714,10 +1714,11 @@
     "print(f\"Using {device} for training.\")\n",
     "\n",
     "X, y = downsample(dataset)\n",
+    "X = add_nan_indicators(X)\n",
     "\n",
     "# Prepare data and add missingness indicators\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "X_train, X_val = add_nan_indicators(X_train), add_nan_indicators(X_val)\n",
+    "# X_train, X_val = add_nan_indicators(X_train), add_nan_indicators(X_val)\n",
     "\n",
     "# Convert to tensors\n",
     "X_train_tensor = torch.tensor(X_train, dtype=torch.float32).to(device)\n",
