Seems to work but still needs to be tested and double checked and of ccourse make other configurations

--- a/notebooks/Transformer_Experimental.ipynb
+++ b/notebooks/Transformer_Experimental.ipynb
@@ -1618,9 +1618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-datascience] *",
+   "display_name": "datascience",
    "language": "python",
-   "name": "conda-env-.conda-datascience-py"
+   "name": "datascience"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1632,7 +1632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
